--- a/index.html
+++ b/index.html
@@ -2,9 +2,24 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Project One</title>
 </head>
 <body>
+  <header class="site-header">
+    <nav class="navigation">
+      <div class="logo">
+        <a href="#">Landing</a>
+      </div>
+      <ul>
+        <li><a href="#Home">Home</a></li>
+        <li><a href="#About">About</a></li>
+        <li><a href="#Contact">Contact</a></li>
+      </ul>
+    </nav>
+  </header>
   
+  <footer>
+
+  </footer>
 </body>
 </html>
